<?xml version="1.0"?>
<package format="2">
  <name>test_data_node</name>
  <version>0.0.0</version>
  <description>The test_data_node package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>
    <depend>roscpp</depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
